--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           #xcode: 14
           platform: iOS
           action: build
-          configuration: release
+          configuration: debug #release
           #code-sign-certificate: ${{ secrets.CERTIFICATE_P12 }}
           #code-sign-certificate-passphrase: ${{ secrets.CERTIFICATE_P12_PW }}
           #mobile-provisioning-profiles-base64: ${{ secrets.PROVISIONING_PROFILE }}
